--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,7 +33,24 @@ jobs:
         with:
           source: ./
           destination: ./_site
+      - name: Setup Node
         with:
           node-version: "20"
           cache: "npm"
       - run: npm install && npm run build
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
+        with:
+          source: ./
+          destination: ./_site
+      - name: Setup Node
+        with:
+          node-version: "20"
+          cache: "npm"
+      - run: npm install && npm run lint
