--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -50,6 +50,7 @@ jobs:
           source: ./
           destination: ./_site
       - name: Setup Node
+        uses: actions/upload-pages-artifact@v3
         with:
           node-version: "20"
           cache: "npm"
